# entity-resolution

./: .gitignore  MISSING.md  README.md  authority_records.json  pyproject.toml
data/: BIBFRAME_Outline.txt  BIBFRAME_Paths.csv  MADS-BF-BFLC.ttl  MADSRDFv1.tdb.json  MADSRDFv1.ttl  MADS_RDF_Outline.txt  MADS_RDF_Paths.csv  Yale_catalog_disambiguated_names.csv  Yale_catalog_names_without_dates.csv  authority.handlebars  authority_ops_test.json  bflc.rdf  bflc.ttl  bibframe.tdb.json  marc.handlebars  n85207910.rdf  yale-schema.json
data/templates/: BIBFRAME_Outline.txt  BIBFRAME_Outline_Selected.txt  MADS_RDF_Outline_Selected.txt
data/test/: README.md  Yale_catalog_disambiguated_names.csv  Yale_catalog_names_without_dates.csv  a.csv  authority_ops_test.json  b.csv  benchmark_data_matches.csv  benchmark_data_matches_expanded_small.csv  benchmark_data_matches_pairs.csv  benchmark_data_matches_with_clusters.csv  benchmark_data_records.csv  benchmark_data_records.jsonl  benchmark_data_records_no_newlines.csv  bf_Agent_LC.ttl  bf_Agent_Yale.ttl  bf_Work.ttl  lib_people_benchmark_data.csv  lib_people_benchmark_data_filtered.csv  lib_people_benchmark_data_for_embedding.json  lib_people_benchmark_results.json  marc_ops_test.json  tmp.csv
schema/: agent_schema_LC.json  agent_schema_Yale.json  work_schema.json  yale.json
