[tool.poetry]
name = "yale-er"
version = "0.1.0"
description = ""
authors = ["Gavin Mendel-Gleason <gavin@terminusdb.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyld = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
